[package]
name = "sacred_aurora"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.0"
bevy_editor_pls = "0.6"
bevy_fly_camera = { git = "https://github.com/sjael/bevy_fly_camera", branch = "main" }
leafwing-input-manager = "0.11.0"
bevy_tweening = "0.9"
strum = "0.24.1"
strum_macros = "0.24.3"
lazy_static = "1.4.0"
oxidized_navigation = { version = "0.8", features = ["xpbd", "debug_draw"] }
#bevy_debug_texture = "0.1"
bevy_debug_texture = { path = "../bevy_debug_texture" }
bevy_xpbd_3d = "0.3"
# for geometric shapes as sprites
#bevy_prototype_lyon = "0.8.0" 
bevy_asset_loader = "0.18"

# Relatively stable crates down here
bitflags = "1.3"
derive_more = "0.99"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
fixed = { version = "1.11", features = ["serde", "std", "serde-str"] }

# keep the following in sync with Bevy's dependencies for window icon
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[[bin]]
name = "local"
path = "src/local.rs"

[patch.crates-io]