[package]
name = "sacred_aurora"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12"
bevy_editor_pls = "0.6"
#bevy_fly_camera = { git = "https://github.com/sjael/bevy_fly_camera", branch = "main" }
leafwing-input-manager = "0.11"
bevy_tweening = "0.9"
strum = "0.25"
strum_macros = "0.25"
lazy_static = "1.4"
oxidized_navigation = { version = "0.8", features = ["xpbd", "debug_draw"] }
bevy_debug_texture = "0.2"
bevy_xpbd_3d = "0.3"
# for geometric shapes as sprites
#bevy_prototype_lyon = "0.8.0" 
bevy_asset_loader = "0.18"
ron = "0.8"

# Relatively stable crates down here
bitflags = "1.3"
derive_more = "0.99"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
fixed = { version = "1.11", features = ["serde", "std", "serde-str"] }

# keep the following in sync with Bevy's dependencies for window icon
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[[bin]]
name = "local"
path = "src/local.rs"

[patch.crates-io]
#bevy_xpbd_3d = { path = "../bevy_xpbd/crates/bevy_xpbd_3d" }
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd" }

# Replacing the entirety of bevy, sed replace "hash" with revision you want.
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_animation = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_asset = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_audio = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_core = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_core_pipeline = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_derive = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_diagnostic = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
##bevy_dylib = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
##bevy_dynamic_plugin = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
##bevy_ecs_compile_fail_tests = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_encase_derive = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_gizmos = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_gilrs = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_gltf = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_hierarchy = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_input = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_internal = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_log = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_macro_utils = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_math = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_mikktspace = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_pbr = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_ptr = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_reflect = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_render = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_scene = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_sprite = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_tasks = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_text = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_time = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_transform = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_ui = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_utils = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_window = { git = "https://github.com/bevyengine/bevy", rev = "hash" }
#bevy_winit = { git = "https://github.com/bevyengine/bevy", rev = "hash" }